apps/services/mlops/local-ai/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: local-ai
  labels:
    app: local-ai
spec:
  selector:
    matchLabels:
      app: local-ai
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      name: local-ai
      labels:
        app: local-ai
    spec:
      runtimeClassName: nvidia
      containers:
      - name: local-ai
        image: quay.io/go-skynet/local-ai:sha-238fec2-cublas-cuda11-ffmpeg
        ports:
          - name: http
            containerPort: 8080
            protocol: TCP
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 35
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
        startupProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 30
          failureThreshold: 10
        resources:
          limits:
            cpu: 6000m
            memory: 16Gi
          requests:
            cpu: 1000m
            memory: 2Gi
        volumeMounts:
        - mountPath: /models
          name: models
      volumes:
      - name: models
        persistentVolumeClaim:
          claimName: localai-storage
      - name: prompt-templates
        configMap:
          name: local-ai-prompt-templates
