apps/services/mlops/local-ai/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: localai-internal
  annotations:
    external-dns.alpha.kubernetes.io/hostname: openai.gruber.dev.br
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/ttl: "120"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: openai.gruber.dev.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: local-ai-tailscale
            port:
              name: http
  tls:
  - hosts:
    - openai.gruber.dev.br
    secretName: localai-tls
